@@ -1,32 +1,33 @@
 package io.github.apace100.apoli.mixin;
 
+import com.llamalad7.mixinextras.injector.ModifyExpressionValue;
+import com.llamalad7.mixinextras.injector.ModifyReturnValue;
+import com.llamalad7.mixinextras.injector.WrapWithCondition;
 import io.github.apace100.apoli.Apoli;
-import io.github.apace100.apoli.access.HiddenEffectStatus;
-import io.github.apace100.apoli.access.ModifiableFoodEntity;
+import io.github.apace100.apoli.access.*;
 import io.github.apace100.apoli.component.PowerHolderComponent;
-import io.github.apace100.apoli.networking.ModPackets;
+import io.github.apace100.apoli.data.ApoliDamageTypes;
+import io.github.apace100.apoli.networking.packet.s2c.SyncAttackerS2CPacket;
 import io.github.apace100.apoli.power.*;
 import io.github.apace100.apoli.util.InventoryUtil;
 import io.github.apace100.apoli.util.StackPowerUtil;
 import io.github.apace100.apoli.util.SyncStatusEffectsUtil;
-import io.netty.buffer.Unpooled;
 import net.fabricmc.fabric.api.networking.v1.PlayerLookup;
 import net.fabricmc.fabric.api.networking.v1.ServerPlayNetworking;
 import net.minecraft.entity.*;
 import net.minecraft.entity.attribute.AttributeContainer;
 import net.minecraft.entity.attribute.EntityAttribute;
-import net.minecraft.entity.attribute.EntityAttributes;
 import net.minecraft.entity.damage.DamageSource;
 import net.minecraft.entity.effect.StatusEffect;
 import net.minecraft.entity.effect.StatusEffectInstance;
-import net.minecraft.entity.mob.MobEntity;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.fluid.FluidState;
+import net.minecraft.inventory.StackReference;
 import net.minecraft.item.ItemStack;
-import net.minecraft.network.PacketByteBuf;
+import net.minecraft.registry.entry.RegistryEntry;
 import net.minecraft.registry.tag.DamageTypeTags;
-import net.minecraft.server.network.ServerPlayerEntity;
 import net.minecraft.registry.tag.FluidTags;
+import net.minecraft.server.network.ServerPlayerEntity;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.World;
@@ -43,14 +44,11 @@ import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 import org.spongepowered.asm.mixin.injection.callback.LocalCapture;
 
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.*;
 
+@SuppressWarnings({"OptionalUsedAsFieldOrParameterType", "unused"})
 @Mixin(LivingEntity.class)
-public abstract class LivingEntityMixin extends Entity implements ModifiableFoodEntity {
+public abstract class LivingEntityMixin extends Entity implements ModifiableFoodEntity, MovingEntity {
     @Shadow
     protected abstract float getJumpVelocity();
 
@@ -70,73 +68,61 @@ public abstract class LivingEntityMixin extends Entity implements ModifiableFood
         super(type, world);
     }
 
-    @Inject(method = "canTarget(Lnet/minecraft/entity/LivingEntity;)Z", at = @At("HEAD"), cancellable = true)
-    private void setCanTargetBasedOnPower(LivingEntity target, CallbackInfoReturnable<Boolean> cir) {
-        if (!((LivingEntity)(Object)this instanceof MobEntity mobEntity)) return;
-        if (PowerHolderComponent.getPowers(mobEntity, ModifyMobBehaviorPower.class).stream().anyMatch(power -> power.getMobBehavior().isPassive(target) && power.getMobBehavior().doesApply(target))) {
-            cir.setReturnValue(false);
-        }
-    }
-
     @Inject(method = "onStatusEffectApplied", at = @At("TAIL"))
-    private void updateStatusEffectWhenApplied(StatusEffectInstance effectInstance, Entity source, CallbackInfo ci) {
-        SyncStatusEffectsUtil.sendStatusEffectUpdatePacket((LivingEntity)(Object)this, SyncStatusEffectsUtil.UpdateType.APPLY, effectInstance);
+    private void apoli$updateStatusEffectWhenApplied(StatusEffectInstance effectInstance, Entity source, CallbackInfo ci) {
+        SyncStatusEffectsUtil.sendStatusEffectUpdatePacket((LivingEntity) (Object) this, SyncStatusEffectsUtil.UpdateType.APPLY, effectInstance);
     }
 
     @Inject(method = "onStatusEffectUpgraded", at = @At("TAIL"))
-    private void updateStatusEffectWhenUpgraded(StatusEffectInstance effectInstance, boolean reapplyEffect, Entity source, CallbackInfo ci) {
-        SyncStatusEffectsUtil.sendStatusEffectUpdatePacket((LivingEntity)(Object)this, SyncStatusEffectsUtil.UpdateType.UPGRADE, effectInstance);
+    private void apoli$updateStatusEffectWhenUpgraded(StatusEffectInstance effectInstance, boolean reapplyEffect, Entity source, CallbackInfo ci) {
+        SyncStatusEffectsUtil.sendStatusEffectUpdatePacket((LivingEntity) (Object) this, SyncStatusEffectsUtil.UpdateType.UPGRADE, effectInstance);
     }
 
     @Inject(method = "onStatusEffectRemoved", at = @At("TAIL"))
-    private void updateStatusEffectWhenRemoved(StatusEffectInstance effectInstance, CallbackInfo ci) {
-        SyncStatusEffectsUtil.sendStatusEffectUpdatePacket((LivingEntity)(Object)this, SyncStatusEffectsUtil.UpdateType.REMOVE, effectInstance);
+    private void apoli$updateStatusEffectWhenRemoved(StatusEffectInstance effectInstance, CallbackInfo ci) {
+        SyncStatusEffectsUtil.sendStatusEffectUpdatePacket((LivingEntity) (Object) this, SyncStatusEffectsUtil.UpdateType.REMOVE, effectInstance);
     }
 
     @Inject(method = "clearStatusEffects", at = @At("RETURN"))
-    private void updateStatusEffectWhenCleared(CallbackInfoReturnable<Boolean> cir) {
-        SyncStatusEffectsUtil.sendStatusEffectUpdatePacket((LivingEntity)(Object)this, SyncStatusEffectsUtil.UpdateType.CLEAR, null);
+    private void apoli$updateStatusEffectWhenCleared(CallbackInfoReturnable<Boolean> cir) {
+        SyncStatusEffectsUtil.sendStatusEffectUpdatePacket((LivingEntity) (Object) this, SyncStatusEffectsUtil.UpdateType.CLEAR, null);
     }
 
-    @ModifyVariable(method = "addStatusEffect(Lnet/minecraft/entity/effect/StatusEffectInstance;Lnet/minecraft/entity/Entity;)Z", at = @At("HEAD"))
-    private StatusEffectInstance modifyStatusEffect(StatusEffectInstance effect) {
-        StatusEffect effectType = effect.getEffectType();
-        int originalAmp = effect.getAmplifier();
-        int originalDur = effect.getDuration();
+    @ModifyVariable(method = "addStatusEffect(Lnet/minecraft/entity/effect/StatusEffectInstance;Lnet/minecraft/entity/Entity;)Z", at = @At("HEAD"), argsOnly = true)
+    private StatusEffectInstance apoli$modifyStatusEffect(StatusEffectInstance original) {
 
-        int amplifier = Math.round(PowerHolderComponent.modify(this, ModifyStatusEffectAmplifierPower.class, originalAmp, power -> power.doesApply(effectType)));
-        int duration = Math.round(PowerHolderComponent.modify(this, ModifyStatusEffectDurationPower.class, originalDur, power -> power.doesApply(effectType)));
+        StatusEffect effectType = original.getEffectType();
 
-        if (amplifier != originalAmp || duration != originalDur) {
-            return new StatusEffectInstance(
-                    effectType,
-                    duration,
-                    amplifier,
-                    effect.isAmbient(),
-                    effect.shouldShowParticles(),
-                    effect.shouldShowIcon(),
-                    ((HiddenEffectStatus) effect).getHiddenEffect(),
-                    Optional.empty()
-            );
-        }
-        return effect;
+        float amplifier = PowerHolderComponent.modify(this, ModifyStatusEffectAmplifierPower.class, original.getAmplifier(), p -> p.doesApply(effectType));
+        float duration = PowerHolderComponent.modify(this, ModifyStatusEffectDurationPower.class, original.getDuration(), p -> p.doesApply(effectType));
+
+        return new StatusEffectInstance(
+            effectType,
+            Math.round(duration),
+            Math.round(amplifier),
+            original.isAmbient(),
+            original.shouldShowParticles(),
+            original.shouldShowIcon(),
+            ((HiddenEffectStatus) original).apoli$getHiddenEffect(),
+            original.getFactorCalculationData()
+        );
+
     }
 
     @Inject(method = "setAttacker", at = @At("TAIL"))
-    private void syncAttacker(LivingEntity attacker, CallbackInfo ci) {
-        if(!getWorld().isClient) {
-            PacketByteBuf buf = new PacketByteBuf(Unpooled.buffer());
-            buf.writeInt(getId());
-            if(this.attacker == null) {
-                buf.writeBoolean(false);
-            } else {
-                buf.writeBoolean(true);
-                buf.writeInt(this.attacker.getId());
-            }
-            for (ServerPlayerEntity player : PlayerLookup.tracking(this)) {
-                ServerPlayNetworking.send(player, ModPackets.SET_ATTACKER, buf);
-            }
+    private void apoli$syncAttacker(LivingEntity attacker, CallbackInfo ci) {
+
+        if (this.getWorld().isClient) {
+            return;
         }
+
+        OptionalInt attackerId = this.attacker != null ? OptionalInt.of(this.attacker.getId()) : OptionalInt.empty();
+        SyncAttackerS2CPacket syncAttackerPacket = new SyncAttackerS2CPacket(this.getId(), attackerId);
+
+        for (ServerPlayerEntity player : PlayerLookup.tracking(this)) {
+            ServerPlayNetworking.send(player, syncAttackerPacket);
+        }
+
     }
 
     @Inject(method = "getEquipmentChanges", at = @At(value = "INVOKE", target = "Lnet/minecraft/entity/attribute/AttributeContainer;removeModifiers(Lcom/google/common/collect/Multimap;)V"), locals = LocalCapture.CAPTURE_FAILHARD)
@@ -184,89 +170,102 @@ public abstract class LivingEntityMixin extends Entity implements ModifiableFood
         return PowerHolderComponent.modify(this, ModifyHealingPower.class, originalValue);
     }
 
+    @Unique
     private boolean apoli$hasModifiedDamage;
-    private Optional<Boolean> apoli$shouldApplyArmor;
-    private Optional<Boolean> apoli$shouldDamageArmor;
+
+    @Unique
+    private Optional<Boolean> apoli$shouldApplyArmor = Optional.empty();
+
+    @Unique
+    private Optional<Boolean> apoli$shouldDamageArmor = Optional.empty();
+
+    @ModifyExpressionValue(method = "onDamaged", at = @At(value = "INVOKE", target = "Lnet/minecraft/entity/damage/DamageSources;generic()Lnet/minecraft/entity/damage/DamageSource;"))
+    private DamageSource apoli$overrideDamageSourceOnSync(DamageSource original, DamageSource source) {
+        return this.getDamageSources().create(ApoliDamageTypes.SYNC_DAMAGE_SOURCE);
+    }
 
     @ModifyVariable(method = "damage", at = @At("HEAD"), argsOnly = true)
-    private float modifyDamageTaken(float originalValue, DamageSource source, float amount) {
-        float newValue = originalValue;
-        LivingEntity thisAsLiving = (LivingEntity)(Object)this;
-        if(source.getAttacker() != null) {
-            if (!source.isIn(DamageTypeTags.IS_PROJECTILE)) {
-                newValue = PowerHolderComponent.modify(source.getAttacker(), ModifyDamageDealtPower.class, originalValue,
-                    p -> p.doesApply(source, originalValue, thisAsLiving), p -> p.executeActions(thisAsLiving));
-            } else {
-                newValue = PowerHolderComponent.modify(
-                    source.getAttacker(), ModifyProjectileDamagePower.class, originalValue,
-                    p -> p.doesApply(source, originalValue, thisAsLiving), p -> p.executeActions(thisAsLiving));
-            }
+    private float apoli$modifyDamageTaken(float original, DamageSource source, float amount) {
+
+        if (source.isOf(ApoliDamageTypes.SYNC_DAMAGE_SOURCE)) {
+            return original;
+        }
+
+        LivingEntity thisAsLiving = (LivingEntity) (Object) this;
+        float newValue = original;
+
+        if (source.getAttacker() != null && source.isIn(DamageTypeTags.IS_PROJECTILE)) {
+            newValue = PowerHolderComponent.modify(source.getAttacker(), ModifyProjectileDamagePower.class, original,
+                p -> p.doesApply(source, original, thisAsLiving),
+                p -> p.executeActions(thisAsLiving));
+        } else if (source.getAttacker() != null) {
+            newValue = PowerHolderComponent.modify(source.getAttacker(), ModifyDamageDealtPower.class, original,
+                p -> p.doesApply(source, original, thisAsLiving),
+                p -> p.executeActions(thisAsLiving));
         }
 
         float intermediateValue = newValue;
-        newValue = PowerHolderComponent.modify(this, ModifyDamageTakenPower.class,
-            intermediateValue, p -> p.doesApply(source, intermediateValue), p -> p.executeActions(source.getAttacker()));
+        newValue = PowerHolderComponent.modify(this, ModifyDamageTakenPower.class, intermediateValue,
+            p -> p.doesApply(source, intermediateValue),
+            p -> p.executeActions(source.getAttacker()));
 
-        apoli$hasModifiedDamage = newValue != originalValue;
+        apoli$hasModifiedDamage = newValue != original;
+        List<ModifyDamageTakenPower> modifyDamageTakenPowers = PowerHolderComponent.getPowers(this, ModifyDamageTakenPower.class)
+            .stream()
+            .filter(mdtp -> mdtp.doesApply(source, original))
+            .toList();
 
-        List<ModifyDamageTakenPower> mdtps = PowerHolderComponent.getPowers(this, ModifyDamageTakenPower.class).stream().filter(p -> p.doesApply(source, originalValue)).toList();
-        long wantArmor = mdtps.stream().filter(p -> p.modifiesArmorApplicance() && p.shouldApplyArmor()).count();
-        long dontWantArmor = mdtps.stream().filter(p -> p.modifiesArmorApplicance() && !p.shouldApplyArmor()).count();
+        long wantArmor = modifyDamageTakenPowers
+            .stream()
+            .filter(mdtp -> mdtp.modifiesArmorApplicance() && mdtp.shouldApplyArmor())
+            .count();
+        long dontWantArmor = modifyDamageTakenPowers
+            .stream()
+            .filter(mdtp -> mdtp.modifiesArmorApplicance() && !mdtp.shouldApplyArmor())
+            .count();
         apoli$shouldApplyArmor = wantArmor == dontWantArmor ? Optional.empty() : Optional.of(wantArmor > dontWantArmor);
-        long wantDamage = mdtps.stream().filter(p -> p.modifiesArmorDamaging() && p.shouldDamageArmor()).count();
-        long dontWantDamage = mdtps.stream().filter(p -> p.modifiesArmorDamaging() && !p.shouldDamageArmor()).count();
+
+        long wantDamage = modifyDamageTakenPowers
+            .stream()
+            .filter(mdtp -> mdtp.modifiesArmorDamaging() && mdtp.shouldDamageArmor())
+            .count();
+        long dontWantDamage = modifyDamageTakenPowers
+            .stream()
+            .filter(mdtp -> mdtp.modifiesArmorDamaging() && !mdtp.shouldDamageArmor())
+            .count();
         apoli$shouldDamageArmor = wantDamage == dontWantDamage ? Optional.empty() : Optional.of(wantDamage > dontWantDamage);
 
         return newValue;
+
     }
 
-    @Inject(method = "damage", at = @At("RETURN"))
-    private void runMobBehaviorDamageMethod(DamageSource source, float amount, CallbackInfoReturnable<Boolean> cir) {
-        if (source.getAttacker() == null || !cir.getReturnValue()) return;
-        PowerHolderComponent.getPowers(this, ModifyMobBehaviorPower.class).forEach(power -> {
-            power.getMobBehavior().onAttacked(source.getAttacker());
-        });
-    }
+    @ModifyExpressionValue(method = "applyArmorToDamage", at = @At(value = "INVOKE", target = "Lnet/minecraft/entity/damage/DamageSource;isIn(Lnet/minecraft/registry/tag/TagKey;)Z"))
+    private boolean apoli$allowApplyingOrDamagingArmor(boolean original, DamageSource source, float amount) {
 
-    @Inject(method = "applyArmorToDamage", at = @At("HEAD"), cancellable = true)
-    private void modifyArmorApplicance(DamageSource source, float amount, CallbackInfoReturnable<Float> cir) {
-        if(apoli$shouldApplyArmor.isPresent()) {
-            if(apoli$shouldDamageArmor.isPresent() && apoli$shouldDamageArmor.get()) {
-                this.damageArmor(source, amount);
-            }
-            if(apoli$shouldApplyArmor.get()) {
-                if(apoli$shouldDamageArmor.isEmpty()) {
-                    this.damageArmor(source, amount);
-                }
-                float damageLeft = DamageUtil.getDamageLeft(amount, this.getArmor(), (float)this.getAttributeValue(EntityAttributes.GENERIC_ARMOR_TOUGHNESS));
-                cir.setReturnValue(damageLeft);
-            } else {
-                cir.setReturnValue(amount);
-            }
-        } else {
-            if(apoli$shouldDamageArmor.isPresent()) {
-                if(apoli$shouldDamageArmor.get() && source.isIn(DamageTypeTags.BYPASSES_ARMOR)) {
-                    this.damageArmor(source, amount);
-                }
-            }
+        if (apoli$shouldApplyArmor.isEmpty() && (original && apoli$shouldDamageArmor.orElse(false))) {
+            this.damageArmor(source, amount);
         }
+
+        return apoli$shouldApplyArmor
+            .map(result -> !result)
+            .orElse(original);
+
     }
 
-    @Redirect(method = "applyArmorToDamage", at = @At(value = "INVOKE", target = "Lnet/minecraft/entity/LivingEntity;damageArmor(Lnet/minecraft/entity/damage/DamageSource;F)V"))
-    private void preventArmorDamaging(LivingEntity instance, DamageSource source, float amount) {
-        if(apoli$shouldDamageArmor.isPresent()) {
-            if(!apoli$shouldDamageArmor.get()) {
-                return;
-            }
-        }
-        this.damageArmor(source, amount);
+    @WrapWithCondition(method = "applyArmorToDamage", at = @At(value = "INVOKE", target = "Lnet/minecraft/entity/LivingEntity;damageArmor(Lnet/minecraft/entity/damage/DamageSource;F)V"))
+    private boolean apoli$allowDamagingArmor(LivingEntity instance, DamageSource source, float amount) {
+        return apoli$shouldDamageArmor.orElse(true);
     }
 
-    @Inject(method = "damage", at = @At(value = "INVOKE", target = "Lnet/minecraft/entity/LivingEntity;isSleeping()Z"), cancellable = true)
-    private void preventHitIfDamageIsZero(DamageSource source, float amount, CallbackInfoReturnable<Boolean> cir) {
-        if(apoli$hasModifiedDamage && amount <= 0f) {
-            cir.setReturnValue(false);
-        }
+    @ModifyExpressionValue(method = "applyArmorToDamage", at = @At(value = "INVOKE", target = "Lnet/minecraft/entity/DamageUtil;getDamageLeft(FFF)F"))
+    private float apoli$allowApplyingArmor(float modified, DamageSource source, float original) {
+        return apoli$shouldApplyArmor.orElse(true) ? modified : original;
+    }
+
+    @ModifyExpressionValue(method = "damage", at = @At(value = "INVOKE", target = "Lnet/minecraft/entity/LivingEntity;isDead()Z", ordinal = 0))
+    private boolean apoli$preventHitIfDamageIsZero(boolean original, DamageSource source, float amount) {
+        //  TODO: Maybe use DecimalFormat to compare the damage amount? Though it's probably unnecessary since we don't need the decimals
+        return original || apoli$hasModifiedDamage && (int) amount <= 0;
     }
 
     @Inject(method = "damage", at = @At("RETURN"))
@@ -283,6 +282,11 @@ public abstract class LivingEntityMixin extends Entity implements ModifiableFood
             PowerHolderComponent.getPowers(source.getAttacker(), TargetActionOnHitPower.class).forEach(p -> p.onHit((LivingEntity)(Object)this, source, amount));
 
         }
+    }
+
+    @Inject(method = "damage", at = @At(value = "INVOKE", target = "Lnet/minecraft/entity/LivingEntity;onDeath(Lnet/minecraft/entity/damage/DamageSource;)V"))
+    private void invokeDeathAction(DamageSource source, float amount, CallbackInfoReturnable<Boolean> cir) {
+        PowerHolderComponent.withPowers(this, ActionOnDeathPower.class, p -> p.doesApply(source.getAttacker(), source, amount), p -> p.onDeath(source.getAttacker()));
     }
 
     @Inject(method = "damage", at = @At(value = "INVOKE", target = "Lnet/minecraft/entity/LivingEntity;onDeath(Lnet/minecraft/entity/damage/DamageSource;)V"))
@@ -324,18 +328,13 @@ public abstract class LivingEntityMixin extends Entity implements ModifiableFood
     }
 
     // SetEntityGroupPower
-    @Inject(at = @At("HEAD"), method = "getGroup", cancellable = true)
-    public void getGroup(CallbackInfoReturnable<EntityGroup> info) {
-        if((Object)this instanceof LivingEntity) {
-            PowerHolderComponent component = PowerHolderComponent.KEY.get(this);
-            List<SetEntityGroupPower> groups = component.getPowers(SetEntityGroupPower.class);
-            if(groups.size() > 0) {
-                if(groups.size() > 1) {
-                    Apoli.LOGGER.warn("Entity " + this.getDisplayName().toString() + " has two instances of SetEntityGroupPower.");
-                }
-                info.setReturnValue(groups.get(0).group);
-            }
-        }
+    @ModifyReturnValue(method = "getGroup", at = @At("RETURN"))
+    private EntityGroup apoli$replaceGroup(EntityGroup original) {
+        return PowerHolderComponent.getPowers(this, SetEntityGroupPower.class)
+            .stream()
+            .max(Comparator.comparing(SetEntityGroupPower::getPriority))
+            .map(SetEntityGroupPower::getGroup)
+            .orElse(original);
     }
 
     // SPRINT_JUMP
@@ -359,28 +358,35 @@ public abstract class LivingEntityMixin extends Entity implements ModifiableFood
     }
 
     // CLIMBING
-    @Inject(at = @At("RETURN"), method = "isClimbing", cancellable = true)
-    public void doSpiderClimbing(CallbackInfoReturnable<Boolean> info) {
-        if(!info.getReturnValue()) {
-            if((Entity)this instanceof LivingEntity) {
-                List<ClimbingPower> climbingPowers = PowerHolderComponent.KEY.get((Entity)this).getPowers(ClimbingPower.class, true);
-                // TODO: Rethink how "holding" is implemented
-                if(climbingPowers.size() > 0) {
-                    if(climbingPowers.stream().anyMatch(ClimbingPower::isActive)) {
-                        BlockPos pos = getBlockPos();
-                        this.climbingPos = Optional.of(pos);
-                        //origins_lastClimbingPos = getPos();
-                        info.setReturnValue(true);
-                    } else if(isHoldingOntoLadder()) {
-                        //if(origins_lastClimbingPos != null && isHoldingOntoLadder()) {
-                            if(climbingPowers.stream().anyMatch(ClimbingPower::canHold)) {
-                                    info.setReturnValue(true);
-                            }
-                        //}
-                    }
-                }
-            }
+    @ModifyReturnValue(method = "isClimbing", at = @At("RETURN"))
+    private boolean apoli$modifyClimbing(boolean original) {
+
+        if (original) {
+            return true;
         }
+
+        List<ClimbingPower> climbingPowers = PowerHolderComponent.getPowers(this, ClimbingPower.class);
+        if (this.isSpectator() || climbingPowers.isEmpty()) {
+            return false;
+        }
+
+        this.climbingPos = Optional.of(this.getBlockPos());
+        return true;
+
+    }
+
+    @ModifyReturnValue(method = "isHoldingOntoLadder", at = @At("RETURN"))
+    private boolean apoli$overrideClimbHold(boolean original) {
+
+        List<ClimbingPower> climbingPowers = PowerHolderComponent.getPowers(this, ClimbingPower.class);
+        if (climbingPowers.isEmpty()) {
+            return original;
+        }
+
+        return climbingPowers
+            .stream()
+            .anyMatch(ClimbingPower::canHold);
+
     }
 
     // SLOW_FALLING
@@ -400,26 +406,18 @@ public abstract class LivingEntityMixin extends Entity implements ModifiableFood
         return in;
     }
 
-    @Inject(method = "getAttributeValue(Lnet/minecraft/entity/attribute/EntityAttribute;)D", at = @At("RETURN"), cancellable = true)
-    private void modifyAttributeValue(EntityAttribute attribute, CallbackInfoReturnable<Double> cir) {
-        double originalValue = this.getAttributes().getValue(attribute);
-        double modified = PowerHolderComponent.modify(this, ModifyAttributePower.class, (float)originalValue, p -> p.getAttribute() == attribute);
-        if(originalValue != modified) {
-            cir.setReturnValue(modified);
+    @Inject(method = "getAttributes", at = @At("RETURN"))
+    private void apoli$setAttributeContainerOwner(CallbackInfoReturnable<AttributeContainer> cir) {
+
+        if (cir.getReturnValue() instanceof OwnableAttributeContainer ownableAttributeContainer) {
+            ownableAttributeContainer.apoli$setOwner(this);
         }
+
     }
 
     @ModifyVariable(method = "travel", at = @At(value = "INVOKE", target = "Lnet/minecraft/entity/LivingEntity;isOnGround()Z", opcode = Opcodes.GETFIELD, ordinal = 2))
     private float modifySlipperiness(float original) {
         return PowerHolderComponent.modify(this, ModifySlipperinessPower.class, original, p -> p.doesApply(getWorld(), getVelocityAffectingPos()));
-    }
-
-    @Inject(method = "pushAway", at = @At("HEAD"), cancellable = true)
-    private void preventPushing(Entity entity, CallbackInfo ci) {
-        if(PowerHolderComponent.hasPower(this, PreventEntityCollisionPower.class, p -> p.doesApply(entity))
-            || PowerHolderComponent.hasPower(entity, PreventEntityCollisionPower.class, p -> p.doesApply(this))) {
-            ci.cancel();
-        }
     }
 
     @Unique
@@ -441,56 +439,87 @@ public abstract class LivingEntityMixin extends Entity implements ModifiableFood
     }
 
     @ModifyVariable(method = "eatFood", at = @At("HEAD"), argsOnly = true)
-    private ItemStack modifyEatenItemStack(ItemStack original) {
-        if((Object)this instanceof PlayerEntity) {
+    private ItemStack apoli$modifyEatenItemStack(ItemStack original) {
+
+        LivingEntity thisAsLiving = (LivingEntity) (Object) this;
+        if (thisAsLiving instanceof PlayerEntity) {
             return original;
         }
-        List<ModifyFoodPower> mfps = PowerHolderComponent.getPowers(this, ModifyFoodPower.class);
-        mfps = mfps.stream().filter(mfp -> mfp.doesApply(original)).collect(Collectors.toList());
-        ItemStack newStack = original;
-        for(ModifyFoodPower mfp : mfps) {
-            newStack = mfp.getConsumedItemStack(newStack);
+
+        StackReference newStack = InventoryUtil.createStackReference(original);
+        List<ModifyFoodPower> modifyFoodPowers = PowerHolderComponent.getPowers(this, ModifyFoodPower.class)
+            .stream()
+            .filter(mfp -> mfp.doesApply(original))
+            .toList();
+
+        for (ModifyFoodPower modifyFoodPower : modifyFoodPowers) {
+            modifyFoodPower.setConsumedItemStackReference(newStack);
         }
-        ((ModifiableFoodEntity)this).setCurrentModifyFoodPowers(mfps);
-        ((ModifiableFoodEntity)this).setOriginalFoodStack(original);
-        return newStack;
+
+        this.apoli$setCurrentModifyFoodPowers(modifyFoodPowers);
+        this.apoli$setOriginalFoodStack(original);
+
+        return newStack.get();
+
     }
 
-    @ModifyVariable(method = "eatFood", at = @At(value = "INVOKE", target = "Lnet/minecraft/entity/LivingEntity;applyFoodEffects(Lnet/minecraft/item/ItemStack;Lnet/minecraft/world/World;Lnet/minecraft/entity/LivingEntity;)V", shift = At.Shift.AFTER))
-    private ItemStack unmodifyEatenItemStack(ItemStack modified) {
-        ModifiableFoodEntity foodEntity = (ModifiableFoodEntity)this;
-        ItemStack original = foodEntity.getOriginalFoodStack();
-        if(original != null) {
-            foodEntity.setOriginalFoodStack(null);
-            return original;
+    @ModifyVariable(method = "eatFood", at = @At(value = "INVOKE", target = "Lnet/minecraft/entity/LivingEntity;applyFoodEffects(Lnet/minecraft/item/ItemStack;Lnet/minecraft/world/World;Lnet/minecraft/entity/LivingEntity;)V", shift = At.Shift.AFTER), argsOnly = true)
+    private ItemStack apoli$unmodifyEatenItemStack(ItemStack modified) {
+
+        ItemStack original = this.apoli$getOriginalFoodStack();
+        if (original == null) {
+            return modified;
         }
-        return modified;
+
+        this.apoli$setOriginalFoodStack(null);
+        return original;
+
     }
 
     @Inject(method = "eatFood", at = @At("TAIL"))
-    private void removeCurrentModifyFoodPowers(World world, ItemStack stack, CallbackInfoReturnable<ItemStack> cir) {
-        setCurrentModifyFoodPowers(new LinkedList<>());
+    private void apoli$removeCurrentModifyFoodPowers(World world, ItemStack stack, CallbackInfoReturnable<ItemStack> cir) {
+        this.apoli$setCurrentModifyFoodPowers(new LinkedList<>());
     }
 
-    @Redirect(method = "eatFood", at = @At(value = "INVOKE", target = "Lnet/minecraft/entity/LivingEntity;applyFoodEffects(Lnet/minecraft/item/ItemStack;Lnet/minecraft/world/World;Lnet/minecraft/entity/LivingEntity;)V"))
-    private void preventApplyingFoodEffects(LivingEntity livingEntity, ItemStack stack, World world, LivingEntity targetEntity) {
-        if(getCurrentModifyFoodPowers().stream().anyMatch(ModifyFoodPower::doesPreventEffects)) {
-            return;
+    @Inject(method = "applyFoodEffects", at = @At("HEAD"), cancellable = true)
+    private void apoli$preventApplyingFoodEffects(ItemStack stack, World world, LivingEntity targetEntity, CallbackInfo ci) {
+        if (this.apoli$getCurrentModifyFoodPowers().stream().anyMatch(ModifyFoodPower::doesPreventEffects)) {
+            ci.cancel();
         }
-        this.applyFoodEffects(stack, world, targetEntity);
+    }
+
+    @ModifyExpressionValue(method = "eatFood", at = @At(value = "INVOKE", target = "Lnet/minecraft/item/ItemStack;isFood()Z"))
+    private boolean apoli$allowConsumingCustomFood(boolean original, World world, ItemStack stack) {
+        return original || ((PotentiallyEdibleItemStack) stack).apoli$getFoodComponent().isPresent();
     }
 
     @Shadow @Nullable private LivingEntity attacker;
 
     @Shadow protected abstract void applyFoodEffects(ItemStack stack, World world, LivingEntity targetEntity);
 
-    @Shadow protected abstract void damageArmor(DamageSource source, float amount);
+    @Shadow public abstract void damageArmor(DamageSource source, float amount);
 
     @Shadow public abstract int getArmor();
 
     @Shadow public abstract double getAttributeValue(EntityAttribute attribute);
 
     @Shadow public abstract AttributeContainer getAttributes();
+
+    @Shadow public abstract boolean isClimbing();
+
+    @Shadow public abstract boolean isDead();
+
+    @Shadow public abstract double getAttributeValue(RegistryEntry<EntityAttribute> attribute);
+
+    @Shadow public abstract double getAttributeBaseValue(EntityAttribute attribute);
+
+    @Shadow public abstract float getArmorVisibility();
+
+    @Shadow public abstract boolean hasStatusEffect(StatusEffect effect);
+
+    @Shadow public abstract boolean damage(DamageSource source, float amount);
+
+    @Shadow protected abstract void onStatusEffectRemoved(StatusEffectInstance effect);
 
     @Inject(method = "getOffGroundSpeed", at = @At("RETURN"), cancellable = true)
     private void modifyFlySpeed(CallbackInfoReturnable<Float> cir) {
@@ -513,27 +542,27 @@ public abstract class LivingEntityMixin extends Entity implements ModifiableFood
     private ItemStack apoli$originalFoodStack;
 
     @Override
-    public List<ModifyFoodPower> getCurrentModifyFoodPowers() {
+    public List<ModifyFoodPower> apoli$getCurrentModifyFoodPowers() {
         return apoli$currentModifyFoodPowers;
     }
 
     @Override
-    public void setCurrentModifyFoodPowers(List<ModifyFoodPower> powers) {
+    public void apoli$setCurrentModifyFoodPowers(List<ModifyFoodPower> powers) {
         apoli$currentModifyFoodPowers = powers;
     }
 
     @Override
-    public ItemStack getOriginalFoodStack() {
+    public ItemStack apoli$getOriginalFoodStack() {
         return apoli$originalFoodStack;
     }
 
     @Override
-    public void setOriginalFoodStack(ItemStack original) {
+    public void apoli$setOriginalFoodStack(ItemStack original) {
         apoli$originalFoodStack = original;
     }
 
     @Inject(method = "baseTick", at = @At("TAIL"))
     private void updateItemStackHolder(CallbackInfo ci) {
-        InventoryUtil.forEachStack(this, stack -> stack.setHolder(this));
+        InventoryUtil.forEachStack(this, stack -> ((EntityLinkedItemStack) stack).apoli$setEntity(this));
     }
 }
